Fix: popup overlape and menu position

--- a/src/editor/svgedit.css
+++ b/src/editor/svgedit.css
@@ -1,13 +1,13 @@
 :root {
-  --main-bg-color: #72797A;
+  --main-bg-color: #72797a;
   --text-color: #000000;
   --border-color: #808080;
-  --canvas-bg-color: #B2B2B2;
+  --canvas-bg-color: #b2b2b2;
   --link-color: #19c;
-  --ruler-color: #B2B2B2;
-  --icon-bg-color: #72797A;
-  --icon-bg-color-hover: #2B3C45;
-  --input-color: #B2B2B2;
+  --ruler-color: #b2b2b2;
+  --icon-bg-color: #72797a;
+  --icon-bg-color-hover: #2b3c45;
+  --input-color: #b2b2b2;
   --global-se-spin-input-width: 82px;
 }
 
@@ -19,7 +19,7 @@
   display: grid;
   grid-template-rows: auto 1px 1fr 40px;
   grid-template-columns: 40px 1px 50px 1fr 15px;
-  grid-template-areas: 
+  grid-template-areas:
     "main main   main top top"
     "left corner rulerX rulerX side"
     "left rulerY workarea workarea side"
@@ -42,7 +42,7 @@
 }
 
 /* on smaller screen, allow 2 lines for the toolbar */
-@media screen and (max-width:1250px) {
+@media screen and (max-width: 1250px) {
   .svg_editor {
     grid-template-rows: minmax(80px, auto) 15px 1fr 40px;
   }
@@ -62,7 +62,7 @@
 
 #workarea {
   grid-area: workarea;
-  background-color: #A0A0A0;
+  background-color: #a0a0a0;
   border: 1px solid var(--border-color);
   overflow: auto;
   text-align: center;
@@ -87,7 +87,7 @@
   color: white;
   position: absolute;
   cursor: pointer;
-  top:50%;
+  top: 50%;
 }
 
 .svg_editor:not(.open) #sidepanel_content {
@@ -103,7 +103,7 @@ hr {
   border-bottom: 1px solid var(--border-color);
 }
 
-#linkLabel>svg {
+#linkLabel > svg {
   height: 20px;
   padding-top: 4px;
 }
@@ -137,18 +137,18 @@ hr {
   width: 132px;
   border-collapse: collapse;
   border: 1px solid var(--border-color);
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 #layerlist tr.layer {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   margin: 0;
   padding: 0;
 }
 
 #layerlist tr.layersel {
   border: 1px solid var(--border-color);
-  background-color: #CCCCCC;
+  background-color: #cccccc;
 }
 
 #layerlist td.layervis {
@@ -200,9 +200,9 @@ hr {
   color: #fff;
   border-radius: 3px;
   padding-block: 2px;
-  padding-left: 2px;
+  padding-left: calc(100% - 200px);
   height: 34px;
-  text-align: end;
+  /* text-align: end; */
 }
 
 #main_icon {
@@ -235,7 +235,7 @@ hr {
   height: 28px;
 }
 
-#main_icon>div {
+#main_icon > div {
   float: left;
 }
 
@@ -275,7 +275,8 @@ hr {
   top: -9px;
 }
 
-#main_menu ul, #main_menu li {
+#main_menu ul,
+#main_menu li {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -292,10 +293,10 @@ hr {
 }
 
 #main_menu li:hover {
-  background: #FFC;
+  background: #ffc;
 }
 
-#main_menu li>div {
+#main_menu li > div {
   float: left;
   padding-right: 5px;
 }
@@ -316,7 +317,7 @@ hr {
   padding-left: 15px;
 }
 
-#tools_top>* {
+#tools_top > * {
   display: flex;
   flex-direction: row;
   z-index: 1;
@@ -335,11 +336,13 @@ hr {
   scrollbar-width: thin; /* Firefox */
 }
 
-#tools_bottom ::-webkit-scrollbar { /* Chrome, Edge, and Safari */
+#tools_bottom ::-webkit-scrollbar {
+  /* Chrome, Edge, and Safari */
   width: 3px;
 }
 
-#tools_bottom se-list, #tools_bottom se-select {
+#tools_bottom se-list,
+#tools_bottom se-select {
   margin-bottom: 8px;
 }
 
@@ -360,7 +363,8 @@ hr {
   scrollbar-width: none; /* Firefox */
 }
 
-#tools_left::-webkit-scrollbar { /* Chrome, Edge, and Safari */
+#tools_left::-webkit-scrollbar {
+  /* Chrome, Edge, and Safari */
   width: 3px;
 }
 
@@ -369,7 +373,7 @@ hr {
 }
 
 #tools_left::-webkit-scrollbar-thumb {
-  background-color:rgb(70, 70, 70);
+  background-color: rgb(70, 70, 70);
 }
 
 /* End scrollbar styling */
@@ -380,7 +384,7 @@ hr {
   fill: none;
   stroke: #000;
   stroke-width: 1px;
-  stroke-opacity: 1.0;
+  stroke-opacity: 1;
   stroke-dasharray: 0;
   opacity: 1;
   pointer-events: stroke;
@@ -392,8 +396,8 @@ hr {
   stroke: none;
 }
 
-#workarea.wireframe #canvasBackground>rect {
-  fill: #FFF !important;
+#workarea.wireframe #canvasBackground > rect {
+  fill: #fff !important;
 }
 
 #cur_context_panel {
@@ -415,7 +419,7 @@ hr {
   text-decoration: underline;
 }
 
-input[type=text] {
+input[type="text"] {
   padding: 2px;
 }
 
@@ -428,18 +432,18 @@ input[type=text] {
   height: 21px;
   margin: 6px 0 0 1px;
   padding: 0;
-  border-left: 1px solid #FFFFFF;
-  border-top: 1px solid #FFFFFF;
+  border-left: 1px solid #ffffff;
+  border-top: 1px solid #ffffff;
   border-right: 1px solid var(--border-color);
   border-bottom: 1px solid var(--border-color);
-  background-color: #E8E8E8;
+  background-color: #e8e8e8;
 }
 
 .dropdown button.down {
   border-left: 1px solid var(--border-color);
   border-top: 1px solid var(--border-color);
-  border-right: 1px solid #FFFFFF;
-  border-bottom: 1px solid #FFFFFF;
+  border-right: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
   background-color: #5a6162;
 }
 
@@ -463,14 +467,14 @@ input[type=text] {
   display: block;
   width: 120px;
   padding: 4px;
-  background: #E8E8E8;
+  background: #e8e8e8;
   border: 1px solid #5a6162;
   margin: 0 0 -1px 0;
   line-height: 16px;
 }
 
 .dropdown li:hover {
-  background-color: #FFC;
+  background-color: #ffc;
 }
 
 .dropdown li.special {
@@ -478,7 +482,7 @@ input[type=text] {
 }
 
 .dropdown li.special:hover {
-  background: #FFC;
+  background: #ffc;
 }
 
 #font_family_dropdown-list li {
@@ -490,7 +494,8 @@ input[type=text] {
   margin-right: 0;
 }
 
-#main_menu li#tool_open, #main_menu li#tool_import {
+#main_menu li#tool_open,
+#main_menu li#tool_import {
   position: relative;
   overflow: hidden;
 }
@@ -499,7 +504,9 @@ input[type=text] {
   overflow: hidden;
 }
 
-#tool_open input, #tool_import input, #tool_image input {
+#tool_open input,
+#tool_import input,
+#tool_image input {
   position: absolute;
   opacity: 0;
   font-size: 10em;
@@ -516,7 +523,7 @@ input[type=text] {
 }
 
 .tool_sep {
-  border-left: 1px outset #EEE;
+  border-left: 1px outset #eee;
   margin: 5px 1px;
   height: 30px;
 }
@@ -555,14 +562,14 @@ input[type=text] {
 }
 
 #toggle_stroke_tools:before {
-  content: '>>';
+  content: ">>";
   letter-spacing: -3px;
   font-weight: bold;
   color: #666;
 }
 
 .expanded #toggle_stroke_tools:before {
-  content: '<<';
+  content: "<<";
 }
 
 #toggle_stroke_tools:hover {
@@ -578,12 +585,12 @@ input[type=text] {
 }
 
 ul li.current {
-  background-color: #F4E284;
+  background-color: #f4e284;
 }
 
 #copyright {
   text-align: right;
-  padding-right: .3em;
+  padding-right: 0.3em;
 }
 
 .overlay {
@@ -603,7 +610,7 @@ ul li.current {
 }
 
 #save_output_btns p {
-  margin: .5em 1.5em;
+  margin: 0.5em 1.5em;
   display: inline-block;
 }
 
@@ -621,5 +628,3 @@ ul li.current {
 svg#svgcontent {
   overflow: hidden;
 }
-
-
